--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react-scripts": "^5.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
