--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-dom": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.2.1"
   },
+  "devDependencies" : {
+    "web-vitals": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
