--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Random Quote Machine",
-  "name": "Get random popular quotes",
+  "name": "FCC: Random Quote Machine",
   "icons": [
     {
       "src": "favicon.ico",
